index.html에 모든 테이블에 행의 수를 출력. >모든 dao.java 파일에 행의 수를 구하는 메소드 입력 >aside.html파일 수정. >각 파일을 address, business, customer, inventory.model패키지로 분류.

--- a/sakila/WebContent/aside.html
+++ b/sakila/WebContent/aside.html
@@ -8,18 +8,16 @@
 	<h1>MENU</h1>
 		<ul>
 			<li>
-				<div>
-					Address 관리
-				</div>
-				<ol>
-					<li><a href ="/sakila/address/country.html">county 관리</a></li>
-					<li>city 관리</li>
-					<li>address 관리</li>
-				</ol>
-			</li>
-			<li><a href ="">Customer 관리</a></li>
-			<li><a href ="">Business 관리</a></li>
-			<li><a href ="">inventory 관리</a></li>
+        		<div>Address 관리</div>
+        		<ol>
+        			<li><a href="/sakila/address/country.html">Country 관리</a></li>
+        			<li><a href="/sakila/address/city.html">City 관리</a></li>
+        			<li><a href="/sakila/address/address.html">Address 관리</a></li>
+        		</ol>
+        	</li>
+	        	<li><a href="">Customer 관리</a></li>
+	        	<li><a href="">Business 관리</a></li>
+	        	<li><a href="">Inventory 관리</a></li>
 		</ul>
 </body>
 </html>
