--- a/sakila/WebContent/template.html
+++ b/sakila/WebContent/template.html
@@ -34,6 +34,10 @@
 		margin-bottom: 100px;
 		background: white;
 	}
+	   table,th,td{
+	    border: 1px solid #000000;
+
+    }
 </style>
 </head>
 <body>
