--- a/sakila/WebContent/index.html
+++ b/sakila/WebContent/index.html
@@ -127,17 +127,11 @@
 <!-- jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
+	
+		//다른 html파일 연결.
 		$("#aside").load("/sakila/aside.html");
 		
-		/*
-		기본 양식
-		$.ajax({ 
-			url: "/rest/1/pages/245", // 클라이언트가 HTTP 요청을 보낼 서버의 URL 주소 
-			data: { name: "홍길동" }, // HTTP 요청과 함께 서버로 보낼 데이터 
-			method: "GET", // HTTP 요청 메소드(GET, POST 등) 
-			dataType: "json" // 서버에서 보내줄 데이터의 타입 
-			})
-		*/
+		//각 테이블에 행의 수를 출력
 		$.ajax({
 				url : "/sakila/indexController",
 				method : "POST",
