--- a/sakila/WebContent/aside.html
+++ b/sakila/WebContent/aside.html
@@ -3,21 +3,37 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style>
+#aside {
+		width: 200px;
+		height: 3000px;
+		position: fixed;
+		background: linear-gradient(90deg, rgb(148, 204, 255), rgb(127, 191, 255));
+		overflow: hidden;
+		float: left;
+		}
+		
+	a{
+		color: black;
+		font-size: large;
+	}
+</style>
+
 </head>
 <body>
 	<h1>MENU</h1>
+		<hr>
 		<ul>
-			<li>
-        		<div>Address 관리</div>
-        		<ol>
-        			<li><a href="/sakila/address/country.html">Country 관리</a></li>
-        			<li><a href="/sakila/address/city.html">City 관리</a></li>
-        			<li><a href="/sakila/address/address.html">Address 관리</a></li>
-        		</ol>
-        	</li>
-	        	<li><a href="">Customer 관리</a></li>
-	        	<li><a href="">Business 관리</a></li>
-	        	<li><a href="">Inventory 관리</a></li>
+			<li><a href="/sakila/index.html">홈</a></li>
+		</ul>
+		<hr>
+		<ul>
+  			<li><a href="/sakila/address/country.html">국가 관리</a></li>
+  			<li><a href="/sakila/address/city.html">도시 관리</a></li>
+  			<li><a href="/sakila/address/address.html">주소 관리</a></li>
+	       	<li><a href="/sakila/Customer.html">고객 관리</a></li>
+	       	<li><a href="">사업 관리</a></li>
+	       	<li><a href="">재고 관리</a></li>
 		</ul>
 </body>
 </html>
