--- a/sakila/WebContent/Customer.html
+++ b/sakila/WebContent/Customer.html
@@ -4,6 +4,17 @@
 <meta charset="UTF-8">
 <title>sakila customer Insert</title>
 <!-- 스타일시트 css 파일 import -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <style>
 	body {
 		padding: 0;
@@ -19,14 +30,6 @@
 		overflow-y: auto;
 	}
 	
-	#aside {
-		width: 200px;
-		height: 3000px;
-		position: fixed;
-		background: orange;
-		overflow: hidden;
-		float: left;
-	}
 	
 	#section {
 		margin-left: 300px;
@@ -53,7 +56,7 @@
                <div>
                   <select size="10" id="countryList">
                   </select>
-               <!-- selecting city -->
+               <!-- 도시 선택 -->
                   <select size="10" id="cityList">
                   </select>
                </div>               
@@ -118,7 +121,7 @@
 		url : "/sakila/customer/selectCustomerList",
 		method : "POST",
 		success : function(json){ //json -> 자바스크립트의 객체로 변경							
-			console.log("successs~!!!");
+			console.log("list successs~!!!");
 			console.log(json);
 		for(let c of json){
 			let html = "<tr>";
@@ -197,7 +200,7 @@
 				"emailName": $("#emailName").val(),
 				},
 				success : function(){
-					console.log("success!");
+					console.log("입력success!");
 			}
 			
 		})
