--- a/sakila/WebContent/Customer.html
+++ b/sakila/WebContent/Customer.html
@@ -49,33 +49,31 @@
       <h1>고객</h1>
       <hr>
       <!-- 도시 추가 -->
+      <legend>주소정보</legend>
       <table>
          <tr>
             <td>
                <!-- 국가 선택 -->
                <div>
-                  <select size="10" id="countryList">
-                  </select>
+                  <select size="10" id="countryList"></select>
                <!-- 도시 선택 -->
-                  <select size="10" id="cityList">
-                  </select>
+                  <select size="10" id="cityList"></select>
                </div>               
             </td>       
       	</tr>
       </table>
-	  <form>
-         	<fieldset>
-                <legend>주소정보</legend>
-                   <hr>
-                   city_id: <input type="text" id="cityId" readonly><hr>
-                   address: <input type="text" id="address" ><hr>
-                   address2: <input type="text" id="address2" ><hr>
-                   district: <input type="text" id="district" ><hr>
-                   postal_code: <input type="text" id="postalCode" ><hr>
-                   phone: <input type="text" id="phone" ><hr>
+      <div>
+	  <form><!-- 주소 정보 입력 -->
+         	<fieldset style="width: 30%">
+			                   도시코드 : <input type="text" id="cityId" readonly><br>
+			   		 주소 : <input type="text" id="address" ><br>
+			                   상세주소 : <input type="text" id="address2" ><br>
+			                   도심명 : <input type="text" id="district" ><br>
+			                   우편번호 : <input type="text" id="postalCode" ><br>
+			                   전화번호 : <input type="text" id="phone" ><br>
              </fieldset>
-             
-             <fieldset>
+             <!-- 고객 정보 입력 -->
+             <fieldset style="width: 30%">
                 <legend>고객정보</legend>
                 <div>storeId :
                    <select id="storeId">
@@ -83,33 +81,33 @@
                       <option value="2">2</option>
                    </select>
                 </div>
-                <div>firstName : <input type="text" id="firstName"></div>
-                <div>lastName : <input type="text" id="lastName"></div>
-                <div>emailName : <input type="text" id="emailName"></div>
+                <div>성 : <input type="text" id="firstName"></div>
+                <div>이름 : <input type="text" id="lastName"></div>
+                <div>이메일 : <input type="text" id="emailName"></div>
              </fieldset>
          <button type="button" id="addCustomer">고객추가</button>
 	</form>   
+		<!-- 고객정보 / 주소정보 리스트 -->
 		<div>
-			<table border ="1">
+			<table class="table table-striped">
 				<thead>
 					<tr>
-						<th>city_id</th>
-						<th>address</th>
-						<th>address2</th>
-						<th>district</th>
-						<th>postal_code</th>
-						<th>phone</th>
-						<th>storeId</th>
-						<th>firstName</th>
-						<th>lastName</th>
-						<th>emailName</th>
+						<th>도시코드</th>
+						<th>주소</th>
+						<th>상세주소</th>
+						<th>도심명</th>
+						<th>우편번호</th>
+						<th>전화번호</th>
+						<th>지역번호</th>
+						<th>성 </th>
+						<th>이름</th>
+						<th>이메일</th>
 					</tr>
 				</thead>
-				<tbody id="list">
-					
-				</tbody>
+				<tbody id="list"></tbody>
 			</table>
 		</div>
+	</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>$("#aside").load("/sakila/aside.html");</script>
