매니저 목록 출력 및 페이지 css적용
매니저 목록 출력.
인덱스, 사이드바 css적용

--- a/sakila/WebContent/index.html
+++ b/sakila/WebContent/index.html
@@ -44,8 +44,14 @@
 		<h1>MENU</h1>
 				<!-- aside.html include -->
 	</div>
+	
+		<!-- <nav class="navbar navbar-expand-md bg-dark navbar-dark narbar-fixed">
+  			<a class="navbar-brand" href="#">SAKILA</a>
+  		</nav> -->
 	<div id="section">
-		<h1>INDEX</h1>
+	
+	
+		<h1><i class="fas fa-film"></i>Sakila</h1>
 		<h2>sakila database table</h2>
 		<table class="table table-hover">
 			<thead>
@@ -56,67 +62,67 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>국가</td>
+					<td>COUNTRY</td>
 					<td><span id="countryRow"></span></td>
 				</tr>
 				<tr>
-        			<td>도시</td>
+        			<td>CITY</td>
         			<td><span id="cityRow"></span></td>
         		</tr>
         		<tr>
-        			<td>주소</td>
+        			<td>ADDRESS</td>
         			<td><span id="addressRow"></span></td>
         		</tr>
         		<tr>
-        			<td>고객</td>
+        			<td>CUSTOMER</td>
         			<td><span id="customerRow"></span></td>
         		</tr>
         		<tr>
-        			<td>사원</td>
+        			<td>STAFF</td>
         			<td><span id="staffRow"></span></td>
         		</tr>
         		<tr>
-        			<td>점포</td>
+        			<td>STORE</td>
         			<td><span id="storeRow"></span></td>
         		</tr>
         		<tr>
-        			<td>지불</td>
+        			<td>PAYMENT</td>
         			<td><span id="payMentRow"></span></td>
         		</tr>
         		<tr>
-        			<td>대여</td>
+        			<td>RENTAL</td>
         			<td><span id="rentalRow"></span></td>
         		</tr>
         		<tr>
-        			<td>분야</td>
+        			<td>CATEGORY</td>
         			<td><span id="categoryRow"></span></td>
         		</tr>
         		<tr>
-        			<td>영화 카테고리</td>
+        			<td>FILM_CATEGORY</td>
         			<td><span id="filmCategoryRow"></span></td>
         		</tr>
         		<tr>
-        			<td>영화</td>
+        			<td>FILM</td>
         			<td><span id="filmRow"></span></td>
         		</tr>
         		<tr>
-        			<td>언어</td>
+        			<td>LANGUAGE</td>
         			<td><span id="languageRow"></span></td>
         		</tr>
         		<tr>
-        			<td>배우</td>
+        			<td>ACTOR</td>
         			<td><span id="actorRow"></span></td>
         		</tr>
         		<tr>
-        			<td>영화배우</td>
+        			<td>FILME_ACTOR</td>
         			<td><span id="filmActorRow"></span></td>
         		</tr>
         		<tr>
-        			<td>재고</td>
+        			<td>INVENTORY</td>
         			<td><span id="inventoryRow"></span></td>
         		</tr>
         		<tr>
-        			<td>영화번역</td>
+        			<td>FILM_TEXT</td>
         			<td><span id="filmTextRow"></span></td>
         		</tr>
 			</tbody>
