대여조회 페이지, vo생성
rental inventory film VO생성

--- a/sakila/WebContent/aside.html
+++ b/sakila/WebContent/aside.html
@@ -21,10 +21,10 @@
 
 </head>
 <body>
-	<h1 style="height : 100px">SAKLIA</h1>
+	<h1 style="height : 100px"><a href="/sakila/index.html">SAKLIA</a></h1>
 		<hr>
 	
-<ul class="list-unstyled components mb-5">
+	<ul class="list-unstyled components mb-5">
       <li class="active">
          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Address</a>
          <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -38,7 +38,7 @@
       <li>
          <a href="#pageSecondMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Customer</a>
          <ul class="collapse list-unstyled" id="pageSecondMenu">
-            <li><a href="/sakila/Customer.html">고객 관리</a></li>
+            <li><a href="/sakila/customer/customer.html">고객 관리</a></li>
          </ul>
       </li>
       
@@ -47,7 +47,7 @@
          <ul class="collapse list-unstyled" id="pageThirdMenu">
             <li><a href="/sakila/business/store.html">점포 관리</a></li>
             <li><a href="/sakila/business/staff.html">매니저 관리</a></li>
-            <li><a href="/sakila/business/staff.html">사업 관리</a></li>
+            <li><a href="/sakila/business/rental.html">대여 관리</a></li>
             <li><a href="/sakila/business/staff.html">재고 관리</a></li>
          </ul>
       </li>
