보유중인 비디오 목록 추가
비디오 목록 추가 및 페이징작업
모든 페이지 상단 바 추가

--- a/sakila/WebContent/address/city.html
+++ b/sakila/WebContent/address/city.html
@@ -48,7 +48,10 @@
     <div id="aside"></div>
     
 	    <div id="section">
-	        	<h1>도시 관리</h1>
+	    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
+	    <h1>도시 관리</h1>
 		<h2>도시 입력</h2>
 		<div>
 			<div>
