--- a/sakila/WebContent/address/country.html
+++ b/sakila/WebContent/address/country.html
@@ -45,7 +45,9 @@
 			<!-- aside.html을 include -->
 	</div>
 	<div id="section">
-		
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
 		<h1>국가</h1>
 			<div class="row">
 				<div>국가이름 : <input type="text" id="country"></div> <!-- 값 하나일땐 id 많을땐 class -->
