--- a/sakila/WebContent/business/rental.html
+++ b/sakila/WebContent/business/rental.html
@@ -42,10 +42,14 @@
 <body>
 	<!-- 메뉴-->
 	<div id="aside">
-			<!-- aside.html을 include -->
+	<!-- aside.html을 include -->
 	</div>
+	
 	<!-- 내용 -->
-	<div id="section" align="center">
+	<div id="section">
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
 		<h1>Rental</h1>
 		
 		<div>
