--- a/sakila/WebContent/business/staff.html
+++ b/sakila/WebContent/business/staff.html
@@ -46,6 +46,9 @@
 	</div>
 	<!-- 내용 -->
 	<div id="section">
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
 		<h1>STAFF</h1>
 		
 		<div>
