--- a/sakila/WebContent/index.html
+++ b/sakila/WebContent/index.html
@@ -44,16 +44,14 @@
 		<h1>MENU</h1>
 				<!-- aside.html include -->
 	</div>
-	
-		<!-- <nav class="navbar navbar-expand-md bg-dark navbar-dark narbar-fixed">
-  			<a class="navbar-brand" href="#">SAKILA</a>
-  		</nav> -->
+
 	<div id="section">
-	
-	
-		<h1><i class="fas fa-film"></i>Sakila</h1>
-		<h2>sakila database table</h2>
-		<table class="table table-hover">
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
+
+		<h2>Sakila database table</h2>
+		<table class="table table-hover table-bordered">
 			<thead>
 				<tr>
 					<th>테이블명</th>
