--- a/sakila/WebContent/address/address.html
+++ b/sakila/WebContent/address/address.html
@@ -45,6 +45,9 @@
 
     </div>
     <div id="section">
+    	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		</nav>
         <h1>주소</h1>
         <h2>주소 입력</h2>
         <table>
