--- a/sakila/WebContent/business/staff.html
+++ b/sakila/WebContent/business/staff.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>sakila - staff </title>
+<title>sakila - staff/store </title>
 
 <!-- 스타일시트 css 파일 import -->
 <!-- Latest compiled and minified CSS -->
@@ -54,6 +54,10 @@
 		<div>
 			<table class="table" id="selectStaff"></table>
 		</div>
+		<div>
+			<button type="button" id="prevBtn">이전</button>
+			<button type="button" id="nextBtn">다음</button>
+		</div>
 	</div>
 
 </body>
@@ -61,9 +65,15 @@
 <script>$("#aside").load("/sakila/aside.html");</script>
 <script>
 
+	let currentPage = 1;
+	let count = 0;
+	let rowPerPage =10;
+	let lastPage =0;
+	//사원 리스트 출력.
 	$.ajax({
 		url : "/sakila/business/selectStaffList",
 		method :"get",
+		data :{"currentPage": currentPage},
 		success : function(json){
 			console.log(json);
 			let staffList = "<thead><tr><th>점포번호</th><th>주소</th><th>스태프</th><th>업데이트</th></tr></thead>";
@@ -78,7 +88,60 @@
 			$("#selectStaff").append(staffList);
 		}
 	})
-
+	
+	$("#nextBtn").click(function()		
+		//전체 수 출력
+		$.ajax({
+			url : "/business/selectStaffCount",
+			method :"get",
+			success : function(json){
+				count = Number(json);
+				console.log(count);
+			}
+		})
+		
+		//라스트 페이지
+		if(count % rowPerPage ==1){
+			lastPage = (count/rowPerPage) +1
+		}else{
+			lastPage = count/rowPerPage;
+		}
+		console.log("lastPage", lastPage);
+		
+		if(currentPage === lastPage){
+			alert("마지막 페이지 입니다");
+			return;
+		}
+		
+		currentPage += 1;
+		console.log(currentPage);
+		
+		$("#selectStaff").empty();
+		//리스트 출력
+		$.ajax({
+			url : "/business/selectStaffList",
+			method :"get",
+			data :{"currentPage": currentPage},
+			success : function(json){
+				console.log(json);
+				let staffList = "<thead><tr><th>점포번호</th><th>주소</th><th>스태프</th><th>업데이트</th></tr></thead>";
+				$(json).each(function(index, item){
+				console.log(index);
+				staffList += "<tbody><tr><td>"+item.store.storeId+"</td>";
+				staffList +="<td>"+item.address.address+"</td>";
+				staffList +="<td>"+item.staffName+"</td>";
+				staffList +="<td>"+item.lastUpdate+"</td>";
+				staffList +="</tr></tbody>";
+				})
+				$("#selectStaff").append(staffList);
+			}
+			
+		})
+		
+		
+		
+	})
+		
 
 </script>
 </html>
