--- a/sakila/WebContent/customer/customer.html
+++ b/sakila/WebContent/customer/customer.html
@@ -33,7 +33,7 @@
 	
 	#section {
 		margin-left: 300px;
-		margin-right: 500px;
+		margin-right: 100px;
 		margin-bottom: 100px;
 		background: white;
 	}
@@ -90,25 +90,26 @@
              </fieldset>
          <button type="button" id="addCustomer">고객추가</button>
 	</form>   
-		<!-- 고객정보 / 주소정보 리스트 -->
-		<div>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>도시코드</th>
-						<th>주소</th>
-						<th>상세주소</th>
-						<th>도심명</th>
-						<th>우편번호</th>
-						<th>전화번호</th>
-						<th>지역번호</th>
-						<th>성 </th>
-						<th>이름</th>
-						<th>이메일</th>
-					</tr>
-				</thead>
-				<tbody id="list"></tbody>
-			</table>
+			<!-- 고객정보 / 주소정보 리스트 -->
+			<div>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>도시코드</th>
+							<th>주소</th>
+							<th>상세주소</th>
+							<th>도심명</th>
+							<th>우편번호</th>
+							<th>전화번호</th>
+							<th>지역번호</th>
+							<th>성 </th>
+							<th>이름</th>
+							<th>이메일</th>
+						</tr>
+					</thead>
+					<tbody id="list"></tbody>
+				</table>
+			</div>	
 		</div>
 	</div>
 </body>
