--- a/sakila/WebContent/business/rental.html
+++ b/sakila/WebContent/business/rental.html
@@ -48,7 +48,7 @@
 	<!-- 내용 -->
 	<div id="section">
 		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		  	<a class="navbar-brand" href="#">SAKILA/Rental</a>		
 		</nav>
 		<h1>Rental</h1>
 		
