--- a/sakila/WebContent/address/country.html
+++ b/sakila/WebContent/address/country.html
@@ -46,32 +46,38 @@
 	</div>
 	<div id="section">
 		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		  	<a class="navbar-brand" href="#">SAKILA/Country</a>		
 		</nav>
-		<h1>국가</h1>
-			<div class="row">
-				<div>국가이름 : <input type="text" id="country"></div> <!-- 값 하나일땐 id 많을땐 class -->
-				<div><button type="button" id ="addCountry">추가</button></div>
-			</div>
-			
-			<h2>국가 목록</h2>
-			<div>
-				<table border="1">
-					<thead>	
-						<tr>
-							<th>국가코드</th>
-							<th>국가이름</th>
-							<th>등록날짜</th>
-					</thead>
-					<tbody id ="list">
+		<h1>국가관리</h1>
+		<hr>
+		
+			<div class="form-group">
+		        <label style="font-weight:bolder;">국가명 :</label>
+		        <input type="text" type="text" id="country">
+		        <button type="button" id ="addCountry">추가</button>
+		    </div>
+		
 					
-					</tbody>
-				</table>
-			</div>
-			<div>
-				<button type="button" id="preBtn">이전</button>
-				<button type="button" id="nextBtn">다음</button>
-			</div>
+		
+		<hr>
+		<h2>국가 목록 조회</h2>
+		<br>
+		<div>
+			<table class="table table-hover">
+				<thead>	
+					<tr>
+						<th>국가코드</th>
+						<th>국가이름</th>
+						<th>등록날짜</th>
+				</thead>
+				<!-- 리스트 출력 -->
+				<tbody id ="list"></tbody>
+			</table>
+		</div>
+		<div>
+			<button type="button" id="preBtn">이전</button>
+			<button type="button" id="nextBtn">다음</button>
+		</div>
 	</div>
 </body>
 	<!-- jquery -->
