--- a/sakila/WebContent/customer/customer.html
+++ b/sakila/WebContent/customer/customer.html
@@ -47,7 +47,7 @@
    <!-- 내용 -->
    <div id="section">
    	  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		  	<a class="navbar-brand" href="#">SAKILA/Customer</a>		
 	  </nav>
       <h1>고객</h1>
       <hr>
