--- a/sakila/WebContent/inventory/film.html
+++ b/sakila/WebContent/inventory/film.html
@@ -56,7 +56,7 @@
 	</div>
 	<div id="section">
 		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		  	<a class="navbar-brand" href="#">SAKILA</a>		
+		  	<a class="navbar-brand" href="#">SAKILA/Film</a>		
 		</nav>
 		<h1>Film</h1>
 		
